Fixed some bugs in the hero page

--- a/hero.html
+++ b/hero.html
@@ -6,8 +6,8 @@
     <meta name="description" content="We make it easier for students to complete their studies successfully without getting burned out and overwhelmed by stress which can lead to chronic stress which leads to deadly disorders such as depression.">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
-    <script src="script.js" defer></script>
+    <link rel="stylesheet" href="hero.css">
+    <script src="hero.js" defer></script>
     <title>MMU Students Counseling System</title>
 </head>
 <body>
@@ -65,4 +65,4 @@
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script> AOS.init();</script>
 </body>
-</html>
+</html
