Fixed navbar bug

--- a/aboutus.html
+++ b/aboutus.html
@@ -1,91 +1,117 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="aboutus.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+      integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="stylesheet" href="aboutus.css" />
     <script defer src="aboutus.js"></script>
     <title>About Us</title>
-</head>
-<body>
-        <nav class="nav" data-aos="fade-down" data-aos-delay="300">
-        <div class="container">
-            <a href="#" class="logo">
-                <img src="assets/logo.jpg" alt="Logo">
-                <span>MMU Care</span>
-                </a>
-            <ul class="links-list">
-                <li><a href="" class="link link1">Home</a></li>
-                <li><a href="" class="link link2">About Us</a></li>
-                <li><a href="" class="link link3">Contact</a></li>
-                <li><a href="" class="link link4">FAQ</a></li>
-                <li><a href="" class="link link5 btn btn--main">Login</a></li>
-                <li><a href="" class="link link6 btn btn--secondary">Sign Up</a></li>
-            </ul>
-            <button class="mobile-nav-toggle">
-                <i class="fa-solid fa-bars"></i>
-            </button>
-            <nav class="mobile-nav">
-            <ul class="links-list">
-                <li><a href="" class="link link1">Home</a></li>
-                <li><a href="" class="link link2">About Us</a></li>
-                <li><a href="" class="link link3">Contact</a></li>
-                <li><a href="" class="link link4">FAQ</a></li>
-                <li><a href="" class="link link5 btn btn--main">Login</a></li>
-                <li><a href="" class="link link6 btn btn--secondary">Sign Up</a></li>
-            </ul>
+  </head>
 
-            <button class="exit-mobile-menu">
-                <i class="fa-solid fa-x"></i>
-            </button>
+  <body>
+    <nav class="nav" data-aos="fade-down" data-aos-delay="300">
+      <div class="container">
+        <a href="#" class="logo">
+          <img src="assets/logo.jpg" alt="Logo" />
+          <span>MMU Care</span>
+        </a>
+        <ul class="links-list">
+          <li><a href="" class="link link1">Home</a></li>
+          <li><a href="" class="link link2">About Us</a></li>
+          <li><a href="" class="link link3">Contact</a></li>
+          <li><a href="" class="link link4">FAQ</a></li>
+          <li><a href="" class="link link5 btn btn--main">Login</a></li>
+          <li><a href="" class="link link6 btn btn--secondary">Sign Up</a></li>
+        </ul>
+        <button class="mobile-nav-toggle">
+          <i class="fa-solid fa-bars"></i>
+        </button>
+        <nav class="mobile-nav">
+          <ul class="links-list">
+            <li><a href="" class="link link1">Home</a></li>
+            <li><a href="" class="link link2">About Us</a></li>
+            <li><a href="" class="link link3">Contact</a></li>
+            <li><a href="" class="link link4">FAQ</a></li>
+            <li><a href="" class="link link5 btn btn--main">Login</a></li>
+            <li>
+              <a href="" class="link link6 btn btn--secondary">Sign Up</a>
+            </li>
+          </ul>
 
-            </nav>
-        </div>
+          <button class="exit-mobile-menu">
+            <i class="fa-solid fa-x"></i>
+          </button>
+        </nav>
+      </div>
     </nav>
-    <section class="hero">
-        <div class="container grid grid--1x2">
-
-            <div class="img-wrapper"><img src="aboutUsHero.jpg" alt="About us hero image"></div>
-            <div class="text-wrapper">
-                <div class="wrapper grid grid--1x2">
-                <header class="motto">
-                    <h1>Motto</h1>
-                    <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus ac nunc quis magna cursus egestas. Integer elementum luctus lectus eget aliquet. Integer ullamcorper nulla ut libero convallis, et scelerisque.</p>
-                </header>
-                <header class="">
-                    <h2>Vision</h2>
-                    <p class="description">To be a beacon of hope and healing for individuals seeking a brighter future.</p>
-                </header>
-                <header class="">
-                    <h2>Mission</h2>
-                    <p class="description">To empower individuals to overcome challenges and achieve emotional well-being.</p>
-                </header>
-    
-                </div>
-            </div>
+    <section class="hero hero1">
+      <div class="container grid grid--1x2">
+        <div class="img-wrapper">
+          <img src="aboutUsHero.jpg" alt="About us hero image" />
         </div>
-        <div class="container grid grid--1x2 hero2">
-
-            <div class="img-wrapper img-wrapper2"><img src="aboutUsImg2.jpg" alt="About us hero image"></div>
-            <div class="text-wrapper">
-                <div class="wrapper grid grid--1x2">
-                <header class="motto">
-                    <h1>How do we do things at COMPANY?</h1>
-                    <p class="description">By creating a visual guide along the way, the designer or developer can get input from the other people involved in the website such as the customer, their manager, and other members of the team. </p>
-                </header>
-                <header class="">
-                    <h2>No. 1</h2>
-                    <p class="description">The effect of different scenarios on the display</p>
-                </header>
-                <header class="">
-                    <h2>No. 2</h2>
-                    <p class="description">The range of functions available</p>
-                </header>
-    
-                </div>
-            </div>
+        <div class="text-wrapper">
+          <div class="wrapper grid grid--1x2">
+            <header class="motto">
+              <h1>Motto</h1>
+              <p class="description">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus
+                ac nunc quis magna cursus egestas. Integer elementum luctus
+                lectus eget aliquet. Integer ullamcorper nulla ut libero
+                convallis, et scelerisque.
+              </p>
+            </header>
+            <header class="">
+              <h2>Vision</h2>
+              <p class="description">
+                To be a beacon of hope and healing for individuals seeking a
+                brighter future.
+              </p>
+            </header>
+            <header class="">
+              <h2>Mission</h2>
+              <p class="description">
+                To empower individuals to overcome challenges and achieve
+                emotional well-being.
+              </p>
+            </header>
+          </div>
         </div>
+      </div>
     </section>
-</body>
+    <section class="container grid grid--1x2 hero2 hero">
+      <div class="img-wrapper img-wrapper2">
+        <img src="aboutUsImg2.jpg" alt="About us hero image" />
+      </div>
+      <div class="text-wrapper">
+        <div class="wrapper grid grid--1x2">
+          <header class="motto">
+            <h1>How do we do things at COMPANY?</h1>
+            <p class="description">
+              By creating a visual guide along the way, the designer or
+              developer can get input from the other people involved in the
+              website such as the customer, their manager, and other members of
+              the team.
+            </p>
+          </header>
+          <header class="">
+            <h2>No. 1</h2>
+            <p class="description">
+              The effect of different scenarios on the display
+            </p>
+          </header>
+          <header class="">
+            <h2>No. 2</h2>
+            <p class="description">The range of functions available</p>
+          </header>
+        </div>
+      </div>
+    </section>
+  </body>
 </html>
