Added little bit of margining and padding
I changed the Lorem text as well

--- a/aboutus.html
+++ b/aboutus.html
@@ -59,23 +59,20 @@
         <div class="text-wrapper">
           <div class="wrapper grid grid--1x2">
             <header class="motto">
-              <h1>Motto</h1>
+              <h1 class="title">Motto</h1>
               <p class="description">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus
-                ac nunc quis magna cursus egestas. Integer elementum luctus
-                lectus eget aliquet. Integer ullamcorper nulla ut libero
-                convallis, et scelerisque.
+                Guiding MMU Towards Emotional Wellness and Academic Success
               </p>
             </header>
             <header class="">
-              <h2>Vision</h2>
+              <h2 class="title">Vision</h2>
               <p class="description">
                 To be a beacon of hope and healing for individuals seeking a
                 brighter future.
               </p>
             </header>
             <header class="">
-              <h2>Mission</h2>
+              <h2 class="title">Mission</h2>
               <p class="description">
                 To empower individuals to overcome challenges and achieve
                 emotional well-being.
@@ -92,23 +89,26 @@
       <div class="text-wrapper">
         <div class="wrapper grid grid--1x2">
           <header class="motto">
-            <h1>How do we do things at COMPANY?</h1>
+            <h1 class="title">How do we do things at COMPANY?</h1>
             <p class="description">
-              By creating a visual guide along the way, the designer or
-              developer can get input from the other people involved in the
-              website such as the customer, their manager, and other members of
-              the team.
+              Holistic Support Approach: We provide comprehensive support
+              tailored to the emotional and academic needs of MMU students.
             </p>
           </header>
           <header class="">
-            <h2>No. 1</h2>
+            <h2 class="title">Holistic Support</h2>
             <p class="description">
-              The effect of different scenarios on the display
+              Holistic Support Approach: We provide comprehensive support
+              tailored to the emotional and academic needs of MMU students.
             </p>
           </header>
           <header class="">
-            <h2>No. 2</h2>
-            <p class="description">The range of functions available</p>
+            <h2 class="title">Tailored Counseling</h2>
+            <p class="description">
+              Personalized Counseling Services: Our counselors offer
+              personalized sessions to address individual challenges and promote
+              well-being.
+            </p>
           </header>
         </div>
       </div>
